opam-version: "2.0"
version: "0.0.7"
synopsis: "A minimal interop OCaml + C logging solution"
description:
  "Echo is a lightweight logging library for OCaml with C lib bindings, allowing both OCaml and C code to emit structured log messages through a unified logging interface."
maintainer: ["Zachary Deak <deakodev@outlook.com>"]
authors: ["Zachary Deak <deakodev@outlook.com>"]
license: "MIT"
tags: ["logging" "console"]
homepage: "https://github.com/deakodev/echo"
doc: "https://github.com/deakodev/echo"
bug-reports: "https://github.com/deakodev/echo/issues"
dev-repo: "git+https://github.com/deakodev/echo.git"

available: arch != "x86_32" & arch != "arm32"

x-ci-accept-failures: [
  ["x86_32"]
  ["arm32"]
]

depends: [
  "dune" {>= "3.18"}
  "ocaml" {>= "4.14"}
  "base"
  "stdio"
  "fmt" {>= "0.8.10"}
  "ctypes" {>= "0.20.0"}
  "ctypes-foreign"
  "alcotest"
  "odoc" {with-doc}
]

build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
